--- a/transactions.html
+++ b/transactions.html
@@ -15,6 +15,7 @@
         });
         </script>
 </head>
+<a href="./index.html">HOME</a>
     <body>
         <div class="flex-container">
             <div class="box-left"></div>
