added link to homepage

--- a/login.html
+++ b/login.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="signup.css"><!-- Add link of CSS file-->
     
     </head>
+    <a href="./index.html">HOME</a>
     <body>
     <div class="container"><!--For style of  body -->
         <div class="header"><!--For style of Header -->
