changed page title text to 'transactions'

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="topnav">
         <a href="#Home">Home</a>
         <a href="#news">About</a>
-        <a href="#contact">xxx</a>
+        <a href="#contact">Banking</a>
         <a href="#about">xxx</a>
         <a href="#Login" class="split">Login/Sign up</a>
     </div>
