updated html text

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <div class="topnav">
         <a href="#Home">Home</a>
         <a href="#news">About</a>
-        <a href="#contact">Banking</a>
+        <a href="./transactions.html">Banking</a>
         <a href="#about">xxx</a>
-        <a href="#Login" class="split">Login/Sign up</a>
+        <a href="./login.html" class="split">Login/Sign up</a>
     </div>
 <!-- Code for header -->
 <div class="header">
