--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <a href="./transactions.html">Banking</a>
         <a href="#about">xxx</a>
         <a href="./login.html" class="split">Login/Sign up</a>
+        <a href="./bot-index.html" class="split">Chat with us!</a>
     </div>
 <!-- Code for header -->
 <div class="header">
