added link to home

--- a/bot-index.html
+++ b/bot-index.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+    <div class="nav bar">
+        <a href="./index.html">HOME</a>
+    </div>
     <!-- CHAT BAR BLOCK -->
     <div class="chat-bar-collapsible">
         <button id="chat-button" type="button" class="collapsible">Chat with us!
