comment out home link

--- a/bot-index.html
+++ b/bot-index.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-    <div class="nav bar">
+    <!-- <div class="nav bar">
         <a href="./index.html">HOME</a>
-    </div>
+    </div> -->
     <!-- CHAT BAR BLOCK -->
     <div class="chat-bar-collapsible">
         <button id="chat-button" type="button" class="collapsible">Chat with us!
