--- a/bot-index.html
+++ b/bot-index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="nav bar">
+    <div class="nav-bar">
         <a href="./index.html">HOME</a>
     </div>
     <!-- CHAT BAR BLOCK -->
