removed button link as code is wrng

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <p class="title">XXX</p>
               <p>Some text that describes me lorem ipsum ipsum lorem.</p>
               <p>XXX</p>
-              <p><button class="button" href="./bot-index.html">Chat with us</button></p>
+              <p><button class="button">Chat with us</button></p>
             </div>
           </div>
         </div>
