--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <a href="#Home">Home</a>
         <a href="#news">About</a>
         <a href="./transactions.html">Banking</a>
-        <a href="#about">xxx</a>
+        <a href="./gov-advice.html">Advice</a>
         <a href="./login.html" class="split">Login/Sign up</a>
         <a href="./bot-index.html" class="split">Chat with us!</a>
     </div>
