home link to giv advice page

--- a/gov-advice.html
+++ b/gov-advice.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="savings.css">
     </head>
     <body>
+        <div class="nav-bar">
+            <a href="./index.html">HOME</a>
+        </div>
         <div class="heading">
             <h1> Government Polices to help cost of living crisis !</h1>
             <p> All domestic energy customers in Great Britain will receive a £400 grant to help with the cost of their energy bills through the Energy Bill Support Scheme.<br>
