--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="header2">
 <h1> What is <em> A Touch Of Lime </em></h1>
 <p> A Touch of Lime is an organisation created to help you better manage
-    the cost of living crisis. <br> From tips and tricks, to our handy chatbox containing a multitude of features including: current deals and offers at a variety of supermarkets, tracking your monthly energy consumption, an analysis of your transactions and potential ways in which you can dave money and a recipe budgeting calculator. </p>
+    the cost of living crisis. <br> From tips and tricks, to our handy chatbox containing a multitude of features including: current deals and offers at a variety of supermarkets, tracking your monthly energy consumption, an analysis of your transactions including potential ways in which you can save money, and a recipe budgeting calculator. </p>
 
 <!-- Code for columns -->
     <div class="row">
