shadow text main header

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
       .header {
       padding: 80px;
       text-align: center;
+      text-shadow:2px 2px #5a5757;
       background-image: url(./images/Gerald_G_Lime_variations_3.svg);
        color: white;
        object-fit: fill;
