changed font to monserrat

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     <style>
       html {
         box-sizing: border-box;
+        font-family: "monserrat";
       }
       
       *, *:before, *:after {
