montserrat text throughout

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <style>
       html {
         box-sizing: border-box;
-        font-family: "monserrat";
+        font-family: 'Montserrat';
       }
       
       *, *:before, *:after {
