--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
         margin-bottom: 16px;
         padding: 0 8px;
         display: flex;
+        flex-direction: row;
       }
       
       @media screen and (max-width: 650px) {
@@ -116,6 +117,7 @@
       .card {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         display: flex;
+        flex-direction: row
       }
       
       .container {
