--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       .card {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         display: flex;
-        flex-direction: row
+        /* flex-direction: row */
       }
       
       .container {
