updated nav bar

--- a/gov-advice.html
+++ b/gov-advice.html
@@ -8,9 +8,16 @@
     <link rel="stylesheet" href="savings.css">
     </head>
     <body>
-        <div class="nav-bar">
-            <a href="./index.html">HOME</a>
+
+        <div class="topnav">
+            <a href="./index.html">Home</a>
+            <a href="#news">About</a>
+            <a href="./transactions.html">Banking</a>
+            <a href="./gov-advice.html">Advice</a>
+            <a href="./login.html" class="split">Login/Sign up</a>
+            <a href="./bot-index.html" class="split">Chat with us!</a>
         </div>
+
         <div class="heading">
             <h1> Government Polices to help cost of living crisis !</h1>
             <p> All domestic energy customers in Great Britain will receive a £400 grant to help with the cost of their energy bills through the Energy Bill Support Scheme.<br>
