--- a/transactions.html
+++ b/transactions.html
@@ -15,7 +15,16 @@
         });
         </script>
 </head>
-<a href="./index.html">HOME</a>
+
+<div class="topnav">
+    <a href="./index.html">Home</a>
+    <a href="#news">About</a>
+    <a href="./transactions.html">Banking</a>
+    <a href="./gov-advice.html">Advice</a>
+    <a href="./login.html" class="split">Login/Sign up</a>
+    <a href="./bot-index.html" class="split">Chat with us!</a>
+</div>
+
     <body>
         <div class="flex-container">
             <div class="box-left"></div>
