added new image

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
       html {
         box-sizing: border-box;
         font-family: 'Montserrat';
+        margin: auto;
       }
       
       *, *:before, *:after {
