updated to latest code

--- a/bot-index.html
+++ b/bot-index.html
@@ -18,7 +18,7 @@
     </div>
     <!-- CHAT BAR BLOCK -->
     <div class="chat-bar-collapsible">
-        <button id="chat-button" type="button" class="collapsible">Chat with us!
+        <button id="chat-button" type="button" class="collapsible">Ask About Deals!
             <i id="chat-icon" style="color: #fff;" class="fa fa-fw fa-comments-o"></i>
         </button>
 
@@ -30,7 +30,7 @@
                         <!-- Messages -->
                         <div id="messages">
                             <h5 id="chat-timestamp"></h5>
-                            <p id="botStarterMessage" class="botText"><span>Loading...</span></p>
+                            <p id="botStarterMessage" class="botText"><span>Looking for deals...</span></p>
                         </div>
 
                         <!-- User input box -->
