--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <title>Lime website</title>
 <!-- Nav bar -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./bot-styles.css">
 </head>
 <body>
    
@@ -92,6 +93,66 @@
         </div>
       </div>
     </div>
+
+    <!-- CHAT BOT CODE -->
+    <div class="chat-bar-collapsible">
+      <button id="chat-button" type="button" class="collapsible">Ask About Deals!
+          <i id="chat-icon" style="color: #fff;" class="fa fa-fw fa-comments-o"></i>
+      </button>
+
+      <div class="content">
+          <div class="full-chat-block">
+              <!-- Message Container -->
+              <div class="outer-container">
+                  <div class="chat-container">
+                      <!-- Messages -->
+                      <div id="messages">
+                          <h5 id="chat-timestamp"></h5>
+                          <p id="botStarterMessage" class="botText"><span>Looking for deals...</span></p>
+                      </div>
+
+                      <!-- User input box -->
+                      <div class="chat-bar-input-block">
+                          <div id="userInput">
+                              <input id="input" class="input-box" type="text" name="msg"
+                                  placeholder="Tap 'Enter' to send a message">
+                              <p></p>
+                          </div>
+
+                          <div class="chat-bar-icons">
+                              <i id="chat-icon" style="color: crimson;" class="fa fa-fw fa-heart"
+                                  onclick="heartButton()"></i>
+                              <i id="chat-icon" style="color: #333;" class="fa fa-fw fa-send"
+                                  onclick="sendButton()"></i>
+                          </div>
+                      </div>
+
+                      <div id="chat-bar-bottom">
+                          <p></p>
+                      </div>
+
+                  </div>
+              </div>
+
+          </div>
+      </div>
+
+  </div>
+
+  <script src="chat.js"></script>
+  <script src=bot-script.js></script>
+
+
+
+
+
+
+
+
+
+
+
+
     
     <footer>
       <p>Copyright &copy; A Touch Of Lime 2022</p>
