removed chat from nav bar

--- a/gov-advice.html
+++ b/gov-advice.html
@@ -16,7 +16,7 @@
             <a href="./transactions.html">Banking</a>
             <a href="./gov-advice.html">Advice</a>
             <a href="./login.html" class="split">Login/Sign up</a>
-            <a href="./bot-index.html" class="split">Chat with us!</a>
+            <!-- <a href="./bot-index.html" class="split">Chat with us!</a> -->
         </div>
         <div class="container">
             <div class="heading">
