--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
         <div class="header"><!--For style of Header -->
             <h2 class="login"> Login Form</h2><!--Title of header -->
         </div>
-        <form action="home.html" class="form" method="GET"><!-- Action-Move to home page when submitted -->
+        <form action="index.html" class="form" method="GET"><!-- Action-Move to home page when submitted -->
             <div class="form-control">
                 <label for="username" class="username" name="username">Username</label><!--Enter User name -->
                 <input id="txtUserName" type="text" name="username"/>
