--- a/energy.html
+++ b/energy.html
@@ -12,11 +12,11 @@
             <h1> Slice of Lime introduce Smart energy meter feature  !</h1>
             <h3> Our feature analyses your smart meter data shows you easy way to use less. 
                 It will gives you warnings when the consumption exceed a specific level.</h3>
-                    <img src="energy.jpg" alt="pic of energy meter">
+                    <img src="./images/energy.jpg" alt="pic of energy meter">
             <h2>How does our Smart energy meter feature works?</h2>
             <h3> If the consumption in a day exceeds  average limits it gives amber warning, When it exceeds upper limit it gives red warning.<br>
                 If its in normal range it shows green .</h3>
-            <img src="warning.jpg"alt =" shows the warning sign">
+            <img src="./images/warning.jpg"alt =" shows the warning sign">
             <h3> An example to demonstrate its working</h3>
         
             <form action="index.html"class="form" method="GET"><!--  -->
