--- a/gov-advice.html
+++ b/gov-advice.html
@@ -12,9 +12,9 @@
 
         <div class="topnav">
             <a href="./index.html">Home</a>
-            <a href="#news">About</a>
             <a href="./transactions.html">Banking</a>
             <a href="./gov-advice.html">Advice</a>
+            <a href="./energy.html">Energy</a>
             <a href="./login.html" class="split">Login/Sign up</a>
             <!-- <a href="./bot-index.html" class="split">Chat with us!</a> -->
         </div>
