--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 <body>
    
     <div class="topnav">
-        <a href="#Home">Home</a>
+        <a href="./index.html">Home</a>
         <a href="./transactions.html">Banking</a>
         <a href="./gov-advice.html">Advice</a>
         <a href="./energy.html">Energy</a>
-        <a href="./login.html" class="split">Login/Sign up</a>
-        <!-- <a href="./bot-index.html" class="split">Chat with us!</a> -->
+        <a href="./signup.html" class="split">Sign up</a>
+        <a href="./login.html" class="split">Log in</a>
     </div>
 <!-- Code for header -->
 <div class="header">
