updated nav bar

--- a/gov-advice.html
+++ b/gov-advice.html
@@ -15,7 +15,8 @@
             <a href="./transactions.html">Banking</a>
             <a href="./gov-advice.html">Advice</a>
             <a href="./energy.html">Energy</a>
-            <a href="./login.html" class="split">Login/Sign up</a>
+            <a href="./signup.html" class="split">Sign up</a>
+            <a href="./login.html" class="split">Log in</a>
             <!-- <a href="./bot-index.html" class="split">Chat with us!</a> -->
         </div>
         <div class="container">
