--- a/energy.html
+++ b/energy.html
@@ -13,7 +13,8 @@
             <a href="./transactions.html">Banking</a>
             <a href="./gov-advice.html">Advice</a>
             <a href="./energy.html">Energy</a>
-            <a href="./login.html" class="split">Login/Sign up</a>
+            <a href="./signup.html" class="split">Sign up</a>
+            <a href="./login.html" class="split">Log in</a>
 
         </div>
         <div class="container">
