updated nav bar

--- a/signup.html
+++ b/signup.html
@@ -9,6 +9,14 @@
     
     </head>
     <body>
+    <div class="topnav">
+        <a href="./index.html">Home</a>
+        <a href="./transactions.html">Banking</a>
+        <a href="./gov-advice.html">Advice</a>
+        <a href="./energy.html">Energy</a>
+        <a href="./signup.html" class="split">Sign up</a>
+        <a href="./login.html" class="split">Log in</a>
+        </div>
     <div class="container"><!--Style of body -->
         <div class="header">
             
