--- a/energy.html
+++ b/energy.html
@@ -19,15 +19,15 @@
         </div>
         <div class="container">
             <div class="heading">
-                <h1> Slice of Lime introduce Smart energy meter feature  !</h1>
-                <h3> Our feature analyses your smart meter data shows you easy way to use less. 
-                    It will gives you warnings when the consumption exceed a specific level.</h3>
+                <h1> Slice of Lime introduce Smart energy meter feature</h1>
+                <h3> Our feature analyses your smart meter data and shows you easy ways to use less. 
+                    It will give you warnings when the consumption exceeds a specific level.</h3>
                         <img src="./images/energy.jpg" alt="pic of energy meter">
-                <h2>How does our Smart energy meter feature works?</h2>
-                <h3> If the consumption in a day exceeds  average limits it gives amber warning, When it exceeds upper limit it gives red warning.<br>
-                    If its in normal range it shows green .</h3>
+                <h2>How does our Smart energy meter feature work?</h2>
+                <h3> If the consumption in a day exceeds average limits it gives an amber warning. When it exceeds the upper limit it gives a red warning.<br>
+                    If its in the normal range it shows green .</h3>
                 <img src="./images/warning.jpg"alt =" shows the warning sign">
-                <h3> An example to demonstrate its working</h3>
+                <h3> An example to demonstrate how it  works</h3>
             
                 <form action="index.html"class="form" method="GET"><!--  -->
                     <div class="form-control">
