removed eft box

--- a/transactions.html
+++ b/transactions.html
@@ -29,7 +29,7 @@
 
     <body>
         <div class="flex-container">
-            <div class="box-left"></div>
+            <!-- <div class="box-left"></div> -->
             <div class="box-centre">
                 <table id="example" class="display" style="width:100%">
                     <thead><tr><th title="Field #1">date</th>
