--- a/transactions.html
+++ b/transactions.html
@@ -28,6 +28,7 @@
 </div>
 
     <body>
+        <div class="container-header"></div>
         <div class="flex-container">
             <!-- <div class="box-left"></div> -->
             <div class="box-centre">
