--- a/gov-advice.html
+++ b/gov-advice.html
@@ -47,7 +47,7 @@
             <!-- <p><button class="button">Chat with us</button></p> -->
           </div>
           <div class="button-container">
-          <button class="button">Find out more at www.gov.uk</button>
+            <button class="button"><a href="https://www.gov.uk/"target="_blank">Find out more</a></button>
           </div>
         </div>
       </div>
@@ -61,7 +61,7 @@
             <p>The citizens advice bureau provides free support to get on top of debt as well as understanding the beneifts you're entitled to</p>
           </div>
           <div class="button-container">
-            <button class="button">Find out more at www.citizensadvice.org.uk</button>
+            <button class="button"><a href="https://www.citizensadvice.org.uk/"target="_blank">Find out more</a></button>
             </div>
         </div>
       </div>
@@ -74,7 +74,8 @@
             <p>Martin Lewis' consumer advice website provides trustworthy advice about everything from shopping vouchers to mortgage deals</p>
           </div>
           <div class="button-container">
-            <button class="button">Find out more at www.moneysavingsexpert.com</button>
+            <button class="button"><a href="https://www.moneysavingexpert.com/"target="_blank">Find out more</a></button>
+
             </div>
         </div>
       </div>
