--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
   <div class="row">
       <div class="column">
         <div class="card">
-          <img src="https://img.freepik.com/free-vector/messaging-application-abstract-concept-illustration_335657-2231.jpg?w=1380&t=st=1668383642~exp=1668384242~hmac=22a42f04a1cf34f7a434e444bd9df5e260ead58cd6c158596a3c70cdb16e5798" alt="Mike" style="width:100%">
+          <img src="https://img.freepik.com/free-vector/calculator-money_603843-1417.jpg?w=1380&t=st=1668381011~exp=1668381611~hmac=b7876e903922cd84ccf4c918621547501b0e230d9e026e8092a5f5cfa948bb72" alt="Mike" style="width:100%">
           <div class="container">
-            <h2>Chat with us</h2>
-            <p>Our friendly chat feature gives you useful information on how to make your money go futher. Ask us about the latest deals at your local supermarket.</p>
+            <h2>Online banking</h2>
+            <p>Keep up to date with your latest transactions and see exactly where your money is going. We'll provide you with a summary using our open banking software to keep your finances in check</p>
             <!-- <p><button class="button">Chat with us</button></p> -->
           </div>
           <div class="button-container">
-          <button class="button">Chat with us</button>
+            <button class="button"><a href="./transactions.html">ONLINE BANKING</a></button>
           </div>
         </div>
       </div>
@@ -69,26 +69,26 @@
       <div class="column">
         <div class="card">
           
-          <img src="https://img.freepik.com/free-vector/calculator-money_603843-1417.jpg?w=1380&t=st=1668381011~exp=1668381611~hmac=b7876e903922cd84ccf4c918621547501b0e230d9e026e8092a5f5cfa948bb72" alt="Jane" style="width:100%">
+          <img src="https://img.freepik.com/free-vector/messaging-application-abstract-concept-illustration_335657-2231.jpg?w=1380&t=st=1668383642~exp=1668384242~hmac=22a42f04a1cf34f7a434e444bd9df5e260ead58cd6c158596a3c70cdb16e5798" alt="Jane" style="width:100%">
           <div class="container">
-            <h2>Finances</h2>
-            <p>Keep up to date with your latest transactions and see exactly where your money is going. We'll provide you with a summary on where you can make potential savings across the month.</p>
+            <h2>Advice</h2>
+            <p>We have all the latest advice on energy saving, debt management, and consumer advice all in one easy to navigate page.  And for anything you can't find we have a handy chat feature with up to the minute offers</p>
           </div>
           <div class="button-container">
-            <button class="button">Learn more</button>
+            <button class="button"><a href="./advice.html">ADVICE</a></button>
             </div>
         </div>
       </div>
       
       <div class="column">
         <div class="card">
-          <img src="https://img.freepik.com/free-vector/flat-design-delicious-sardine-illustration_23-2149007603.jpg?w=1380&t=st=1668383506~exp=1668384106~hmac=950904201d599473e2b4b179d4a5614de495dffc15de683ebd1c598dbb1839cc" alt="John" style="width:100%">
+          <img src="https://img.freepik.com/free-vector/electric-charge-electricity-generation-light-production-female-pc-user-with-electrical-appliance-cartoon-character-device-charging_335657-3384.jpg?w=740&t=st=1668681859~exp=1668682459~hmac=eb2b7c342452ccd34112c9445ae04425dab297e5cfaa18b2f6eacc8da0b2c651" alt="John" style="width:100%">
           <div class="container">
-            <h2>Reducing food waste</h2>
-            <p>In the UK alone, 9.52 million tonnes of food gets thrown out per year. Learn more about the different ways in which you can save food and your money.</p>
+            <h2>Reducing energy</h2>
+            <p>Use our smart energy feature to help cut costs and reduce your impact on the planet</p>
           </div>
           <div class="button-container">
-            <button class="button">Learn more</button>
+            <button class="button"><a href="./energy.html">SMART ENERGY TOOL</a></button>
             </div>
         </div>
       </div>
