--- a/energy.html
+++ b/energy.html
@@ -42,7 +42,7 @@
                         <br>
                         <button type="submit" class="submit"><strong>Submit</strong> </button><!--Submit button-->
                         <br>
-                        <h3> Gives you warning signal</h3>
+                        <h3> Gives you a warning signal</h3>
                         
                     </div>
                 </form>
