--- a/transactions.html
+++ b/transactions.html
@@ -1430,4 +1430,8 @@
       
         <script src="chat.js"></script>
         <script src=bot-script.js></script>
+
+        <footer>
+            <p>Copyright &copy; A Touch Of Lime 2022</p>
+          </footer>
 </html>
