--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <p>We have all the latest advice on energy saving, debt management, and consumer advice all in one easy to navigate page.  And for anything you can't find we have a handy chat feature with up to the minute offers</p>
           </div>
           <div class="button-container">
-            <button class="button"><a href="./advice.html">ADVICE</a></button>
+            <button class="button"><a href="./gov-advice.html">ADVICE</a></button>
             </div>
         </div>
       </div>
